<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.xmohitx.knowmyranchi.MainActivity"
    tools:showIn="@layout/app_bar_main"
    android:clickable="true"
    android:background="@color/highlighted_text_material_dark"
    android:contextClickable="false"
    android:longClickable="false"
    android:foregroundGravity="top|center_vertical|fill">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome"
        android:id="@+id/textView1"
        android:layout_marginTop="32dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/know_my_ranchi"
        android:id="@+id/textView3"
        android:layout_gravity="center"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/to"
        android:id="@+id/textView2"
        android:layout_gravity="center"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app"
        android:id="@+id/textView"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/are_you_new_to_ranchi"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView"
        android:layout_marginTop="40dp"
        android:layout_alignRight="@+id/textView1"
        android:layout_alignEnd="@+id/textView1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/this_app_will_help_you_know_ranchi"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView4"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/button"
        android:textColor="@color/material_blue_grey_800"
        android:textColorHighlight="@color/abc_search_url_text"
        android:layout_gravity="center_horizontal|bottom"
        style="@style/Base.ThemeOverlay.AppCompat.Light"
        android:background="@drawable/button_round_edge"
        android:backgroundTint="@color/material_deep_teal_500"
        android:shadowColor="@color/background_floating_material_dark"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/textView5"
        android:layout_alignRight="@+id/textView4"
        android:layout_alignEnd="@+id/textView4"
        android:drawableTint="@color/material_deep_teal_500"
        android:ellipsize="none"
        android:foregroundTint="@color/accent_material_dark"
        android:enabled="true"
        android:foregroundGravity="top|center_vertical|fill" />
            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/button"
                android:layout_marginTop="30dp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                ads:adSize="BANNER"
                ads:adUnitId="ca-app-pub-3933002442117887/5504131173">
            </com.google.android.gms.ads.AdView>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
