<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.xmohitx.knowmyranchi.main_menu"
    tools:showIn="@layout/app_bar_main_menu"
    android:background="#80ccffff">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_activity_quick_facts"
                android:id="@+id/button2"
                android:background="@drawable/button_mainmenu"
                android:paddingLeft="10dp"
                android:paddingRight="23dp"
                android:drawablePadding="5dp"
                android:textColor="@android:color/secondary_text_light"
                android:enabled="true"
                android:drawableLeft="@drawable/bulb1"
                android:layout_marginBottom="29dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="50dp"
                android:textSize="15sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/places_to_visit"
                android:id="@+id/button3"
                android:background="@drawable/button_mainmenu"
                android:paddingLeft="10dp"
                android:paddingRight="52dp"
                android:drawablePadding="10dp"
                android:textColor="@android:color/secondary_text_light"
                android:enabled="true"
                android:drawableLeft="@drawable/rooms1"
                android:layout_marginBottom="29dp"
                android:layout_marginLeft="50dp"
                android:textSize="15sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/find_in_ranchi"
                android:id="@+id/button4"
                android:background="@drawable/button_mainmenu"
                android:paddingLeft="10dp"
                android:paddingRight="57dp"
                android:drawablePadding="10dp"
                android:textColor="@android:color/secondary_text_light"
                android:enabled="true"
                android:drawableLeft="@drawable/find1"
                android:layout_marginBottom="29dp"
                android:layout_marginLeft="50dp"
                android:textSize="15sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/administration"
                android:id="@+id/button5"
                android:background="@drawable/button_mainmenu"
                android:paddingLeft="10dp"
                android:paddingRight="42dp"
                android:drawablePadding="10dp"
                android:textColor="@android:color/secondary_text_light"
                android:enabled="true"
                android:drawableLeft="@drawable/admin"
                android:layout_marginLeft="50dp"
                android:textSize="15sp" />

        </LinearLayout>
    </ScrollView>




</RelativeLayout>
